fixed normal brightness being too high, fixed card still showing color when invalid, fixed card not reloading when canceling card editing

--- a/src/app/card/card.page.scss
+++ b/src/app/card/card.page.scss
@@ -56,4 +56,8 @@ ion-range {
   height: fit-content;
   border-radius: 0.25rem;
   padding: 0.5rem;
+  display: none;
+}
+.loaded-container {
+  display: block;
 }
